--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -112,6 +112,9 @@
         options: [
             {'label': 'GPT 3.5 Turbo', 'value': 'gpt-3.5-turbo'},
             {'label': 'GPT 4', 'value': 'gpt-4'},
+            {'label': 'GPT 4 Turbo', 'value': 'gpt-4-turbo'},
+            {'label': 'GPT 4o Mini', 'value': 'gpt-4o-mini'},
+            {'label': 'GPT 4o', 'value': 'gpt-4o'},
         ],
         errors: settings.getErrors("openAiModel"),
     }) }}
