move settings to database

--- a/src/templates/glossaries/index.twig
+++ b/src/templates/glossaries/index.twig
@@ -7,7 +7,7 @@
     { label: 'Multi Translator', url: url('multi-translator') },
 ] %}
 
-{% set settings = craft.multiTranslator.settings %}
+{% set settings = craft.multiTranslator.providerSettings %}
 {% set service = craft.multiTranslator.service %}
 
 {% block actionButton %}
