update legend title in review template

--- a/src/templates/_translate/review.twig
+++ b/src/templates/_translate/review.twig
@@ -102,7 +102,7 @@
             </fieldset>
             <fieldset>
                 <legend>
-                    <h2>General Options</h2>
+                    <h2>Override settings once</h2>
                 </legend>
 
                 {{ forms.lightswitchField({
