--- a/src/templates/_sidebar/buttons.twig
+++ b/src/templates/_sidebar/buttons.twig
@@ -10,66 +10,72 @@
             {% set sites = craft.app.sites.allSites %}
 
             <div class="field">
-                {% if existingSiteIds|length > 1 %}
-                <button type="button" class="btn menubtn" aria-label="Translate">Translate from...</button>
-                <div class="menu">
-                    <ul>
-                        {% for site in sites %}
-                            {% if site.id in existingSiteIds %}
-                                <li>
-                                    <a class=""
-                                       href="{{ actionUrl('multi-translator/sidebar/translate', {
-                                           'elementId': element.canonicalId,
-                                           'elementType': element.className,
-                                           'sourceSiteId': site.id,
-                                           'targetSiteId': element.siteId
-                                       }) }}">
-                                        {{ site.name }} ({{ site.locale }})
-                                        {%- if element.siteId == site.id %} (self){% endif %}
-                                    </a>
-                                </li>
-                            {% endif %}
-                        {% endfor %}
-                    </ul>
+                <div class="input">
+                    {% if existingSiteIds|length > 1 %}
+                        <button type="button" class="btn menubtn" aria-label="Translate">Translate from...</button>
+                        <div class="menu">
+                            <ul>
+                                {% for site in sites %}
+                                    {% if site.id in existingSiteIds %}
+                                        <li>
+                                            <a class=""
+                                               href="{{ actionUrl('multi-translator/sidebar/translate', {
+                                                   'elementId': element.canonicalId,
+                                                   'elementType': element.className,
+                                                   'sourceSiteId': site.id,
+                                                   'targetSiteId': element.siteId
+                                               }) }}">
+                                                {{ site.name }} ({{ site.locale }})
+                                                {%- if element.siteId == site.id %} (self){% endif %}
+                                            </a>
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    {% else %}
+                        <p>
+                            This entry has no other translations yet.
+                        </p>
+                    {% endif %}
                 </div>
-                {% else %}
-                    <p>
-                        This entry has no other translations yet.
-                    </p>
-                {% endif %}
             </div>
             <div class="field">
-                <button type="button" class="btn menubtn" aria-label="Translate">Translate to...</button>
-                <div class="menu">
-                    <ul>
-                        {% for site in sites %}
-                            {% if site.id in supportedSiteIds %}
-                                <li>
-                                    <a class=""
-                                       href="{{ actionUrl('multi-translator/sidebar/translate', {
-                                           'elementId': element.canonicalId,
-                                           'elementType': element.className,
-                                           'sourceSiteId': element.siteId,
-                                           'targetSiteId': site.id
-                                       }) }}">
-                                        {{ site.name }} ({{ site.locale }})
-                                        {%- if element.siteId == site.id %} (self){% endif %}
-                                    </a>
-                                </li>
-                            {% endif %}
-                        {% endfor %}
-                    </ul>
+                <div class="input">
+                    <button type="button" class="btn menubtn" aria-label="Translate">Translate to...</button>
+                    <div class="menu">
+                        <ul>
+                            {% for site in sites %}
+                                {% if site.id in supportedSiteIds %}
+                                    <li>
+                                        <a class=""
+                                           href="{{ actionUrl('multi-translator/sidebar/translate', {
+                                               'elementId': element.canonicalId,
+                                               'elementType': element.className,
+                                               'sourceSiteId': element.siteId,
+                                               'targetSiteId': site.id
+                                           }) }}">
+                                            {{ site.name }} ({{ site.locale }})
+                                            {%- if element.siteId == site.id %} (self){% endif %}
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </div>
                 </div>
             </div>
 
             <div class="field">
-                <a href="{{ url('multi-translator/translate/review', {
-                    'elementId': element.canonicalId,
-                    'elementType': element.className,
-                    'sourceSiteId': element.siteId,
-                }) }}">
-                    More options
-                </a>
+                <div class="input">
+                    <a href="{{ url('multi-translator/translate/review', {
+                        'elementId': element.canonicalId,
+                        'elementType': element.className,
+                        'sourceSiteId': element.siteId,
+                    }) }}">
+                        More options
+                    </a>
+                </div>
             </div>
         </div>
     </fieldset>
