--- a/src/templates/_translate/review.twig
+++ b/src/templates/_translate/review.twig
@@ -152,6 +152,15 @@
                     on: settings.updateInternalLinks,
                     errors: settings.getErrors("updateInternalLinks"),
                 }) }}
+
+                {{ forms.lightswitchField({
+                    label: "Translated CKeditor nested entries",
+                    instructions: "Find and process nested Entries inside CKeditor value",
+                    id: "processNestedEntries",
+                    name: "processNestedEntries",
+                    on: settings.processNestedEntries,
+                    errors: settings.getErrors("processNestedEntries"),
+                }) }}
             </fieldset>
         {% endnamespace %}
 
