use multiTranslateContent permission for review template

--- a/src/templates/_translate/review.twig
+++ b/src/templates/_translate/review.twig
@@ -1,4 +1,4 @@
-{% requirePermission 'multiTranslateSettings' %}
+{% requirePermission 'multiTranslateContent' %}
 {% extends "_layouts/cp" %}
 {% import '_includes/forms.twig' as forms %}
 
