update deepl supported languages for glossaries

--- a/src/templates/glossaries/_edit.twig
+++ b/src/templates/glossaries/_edit.twig
@@ -10,20 +10,38 @@
 
 {% set supportedLanguages = [
     {value: '', label: '- select language -'},
+    {value: 'ar', label: 'Arabic (AR)'},
+    {value: 'bg', label: 'Bulgarian (BG)'},
+    {value: 'cs', label: 'Czech (CS)'},
     {value: 'da', label: 'Danish (DA)'},
     {value: 'de', label: 'German (DE)'},
+    {value: 'el', label: 'Greek (EL)'},
     {value: 'en', label: 'English (EN)'},
     {value: 'es', label: 'Spanish (ES)'},
+    {value: 'et', label: 'Estonian (ET)'},
+    {value: 'fi', label: 'Finnish (FI)'},
     {value: 'fr', label: 'French (FR)'},
+    {value: 'he', label: 'Hebrew (HE)'},
+    {value: 'hu', label: 'Hungarian (HU)'},
+    {value: 'id', label: 'Indonesian (ID)'},
     {value: 'it', label: 'Italian (IT)'},
     {value: 'ja', label: 'Japanese (JA)'},
     {value: 'ko', label: 'Korean (KO)'},
+    {value: 'lt', label: 'Lithuanian (LT)'},
+    {value: 'lv', label: 'Latvian (LV)'},
     {value: 'nb', label: 'Norwegian Bokmål (NB)'},
     {value: 'nl', label: 'Dutch (NL)'},
     {value: 'pl', label: 'Polish (PL)'},
     {value: 'pt', label: 'Portuguese (PT)'},
+    {value: 'ro', label: 'Romanian (RO)'},
     {value: 'ru', label: 'Russian (RU)'},
+    {value: 'sk', label: 'Slovak (SK)'},
+    {value: 'sl', label: 'Slovenian (SL)'},
     {value: 'sv', label: 'Swedish (SV)'},
+    {value: 'th', label: 'Thai (TH)'},
+    {value: 'tr', label: 'Turkish (TR)'},
+    {value: 'uk', label: 'Ukrainian (UK)'},
+    {value: 'vi', label: 'Vietnamese (VI)'},
     {value: 'zh', label: 'Chinese (ZH)'}
 ] %}
 
