add translate to all sites from actions

--- a/src/templates/_actions/trigger.twig
+++ b/src/templates/_actions/trigger.twig
@@ -10,5 +10,10 @@
                 </li>
             {% endif %}
         {% endfor %}
+        <li>
+            <a class="formsubmit" data-param="targetSiteHandle" data-value="_ALL_">
+                <strong>All sites</strong>
+            </a>
+        </li>
     </ul>
 </div>
