--- a/src/templates/_translate/review.twig
+++ b/src/templates/_translate/review.twig
@@ -12,7 +12,7 @@
 
 {% block content %}
     <h2>Elements</h2>
-    <div class="elements">
+    <div class="main">
         <div class="tableview">
             <table class="data fullwidth">
                 <thead>
