--- a/src/templates/_actions/trigger.twig
+++ b/src/templates/_actions/trigger.twig
@@ -1,19 +1,26 @@
 <button type="button" class="btn menubtn" aria-label="Translate">Translate to</button>
 <div class="menu">
     <ul>
+        {% set userCanEditAllSites = true %}
         {% for site in craft.app.sites.allSites %}
-            {% if site.handle != craft.app.request.getParam('site') %}
-                <li>
-                    <a class="formsubmit" data-param="targetSiteHandle" data-value="{{ site.handle }}">
-                        {{ site.name }} ({{ site.locale }})
-                    </a>
-                </li>
+            {% if currentUser.can('editSite:'~site.uid) %}
+                {% if site.handle != craft.app.request.getParam('site') %}
+                    <li>
+                        <a class="formsubmit" data-param="targetSiteHandle" data-value="{{ site.handle }}">
+                            {{ site.name }} ({{ site.locale }})
+                        </a>
+                    </li>
+                {% endif %}
+            {% else %}
+                {% set userCanEditAllSites = false %}
             {% endif %}
         {% endfor %}
-        <li>
-            <a class="formsubmit" data-param="targetSiteHandle" data-value="_ALL_">
-                <strong>All sites</strong>
-            </a>
-        </li>
+        {% if userCanEditAllSites %}
+            <li>
+                <a class="formsubmit" data-param="targetSiteHandle" data-value="_ALL_">
+                    <strong>All sites</strong>
+                </a>
+            </li>
+        {% endif %}
     </ul>
 </div>
